Fixing navbar to <nav>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body class="main">
-        <div class="main navbar">
+
+        <nav class="main navbar">
             <ul class="navbarul">
                 <strong>
                     <li class="navbarli right">
@@ -53,13 +54,13 @@
                     </li>
                 </strong>
             </ul>
-        </div>
+        </nav>
         
 
         <div class="splashdiv">
             <img src="High_Res.png" alt="SadBoat Logo" class="logo">
             <h1 class="splash">
-                Reckless Abandon <br>
+                Reckless Abandon<br>
                 is our motto.
                 <hr class="splashrule">
             </h1>
