--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body class="main">
-        <div class="main navbar">
+        <nav class="main navbar">
             <ul class="navbarul">
                 <strong>
                     <li class="navbarli right">
@@ -53,7 +53,7 @@
                     </li>
                 </strong>
             </ul>
-        </div>
+        </nav>
    
         <div class="main footer">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
