Renaming index, changing links to match

--- a/template.html
+++ b/template.html
@@ -34,7 +34,7 @@
                         
                     </div>
                     <div class="navLink">
-                        <a class="navLinkContent" href="index2.html">Home</a>
+                        <a class="navLinkContent" href="index.html">Home</a>
                     </div>
                     <div class="navLink">
                         <a class="navLinkContent" href="news.html">News</a>
@@ -138,7 +138,7 @@
                             <!-- Overlay content -->
                             <div class="overlay-content">
                                     <table>
-                                        <div class="pageSection break navSection"><a href="index2.html">Home</a></div>
+                                        <div class="pageSection break navSection"><a href="index.html">Home</a></div>
                                         <div class="pageSection break navSection"><a href="news.html">News</a></div>
                                         <div class="pageSection break navSection"><a href="about.html">About Us</a></div>
                                         <div class="pageSection break navSection"><a href="contact.html">Contact Us</a></div>
