--- a/subpages/contact.html
+++ b/subpages/contact.html
@@ -20,6 +20,47 @@
 
     </head>
     <body>
-        
+        <section class="contact">
+            <div style="width:50vw; float:left;">
+                <h1 style="font-size:3vw;">
+                    Contact us!
+                </h1>
+                <hr style="width:75%; margin-bottom: 2vh;">
+                <article style="margin-bottom: 2vh; height: 35vh;" class="card">
+                    <div style="margin-left:5%;">
+                        <h1 style="color:black;">Email:</h1>
+                        <ul>
+                            <li style="color:black;">Programming: dagan.poulin@sadboat.com</li>
+                            <li style="color:black;">Physics: justice.guillory@sadboat.com</li>
+                            <li style="color:black;">Engine Concerns: dagan.poulin@sadboat.com</li>
+                            <li style="color:black;">Title Concerns: contact@sadboat.com</li>
+                        </ul>
+                    </div>
+
+                </article>
+
+                <article style="margin-bottom: 2vh; height: 35vh;" class="card">
+                    <div style="margin-left:5%;">
+                        <h1 style="color:black;">Commission:</h1>
+                        <p style="color:black; margin-bottom:2vh; margin-right: 5%;">
+                            If you'd like to contact us regarding working on or for commission for art, programming, music, games, or otherwise; please contact contact@sadboat.com.
+                        </p>
+                        <p style="color:black; margin-bottom:2vh; margin-right: 5%;">
+                            This email is regularly monitored and we will respond within 48 business hours.
+                        </p>
+                    </div>
+                </article>
+            </div>
+
+
+            <div style="width:50vw; float:right;">
+                <h1 style="font-size:3vw;">
+                    Discord:
+                </h1>
+                <hr style="width:75%; margin-bottom: 2vh;">
+
+                
+            </div>
+        </section>
     </body>
 </html>
