--- a/subpages/home.html
+++ b/subpages/home.html
@@ -24,12 +24,11 @@
             <table>
                 <tr>
                     <td style="width:50vw;">
-                        <img alt="logo" class="logo" src="../images/High_Res.png" style="width: 10vw; margin-left:16vw;">
+                        <img alt="logo" class="logo" loading="eager" src="../images/High_Res.png">
                     </td>
                     <td style="width:50vw;">
-                        <h1>Reckless Abandon</h1>
-                        <p></p>
-                        <h1>is our motto.</h1>
+                        <h1 class="motto">Reckless Abandon</h1>
+                        <h1 class="motto">is our motto.</h1>
                     </td>
                 </tr>
             </table>
