Adding discord to Contact Us

--- a/subpages/contact.html
+++ b/subpages/contact.html
@@ -58,8 +58,8 @@
                     Discord:
                 </h1>
                 <hr style="width:75%; margin-bottom: 2vh;">
+                <iframe style="width:80%; height:70vh;" src="https://discord.com/widget?id=854077586473091173&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
-                
             </div>
         </section>
     </body>
