--- a/subpages/copyright.html
+++ b/subpages/copyright.html
@@ -21,11 +21,53 @@
     </head>
     <body>
         <section class="copyright">
-            <div style="width:50vw; float:left;">
-            
+            <div style="width:47vw; float:left;">
+                <h1>The SadBoat Engine</h1>
+                <hr style="width:75%;">
+                <p style="margin-top:2vh;">
+                    The SadBoat Engine is distrubuted under the Apache License 2.0.
+                </p>
+                <p style="margin-top:2vh;">
+                    <strong>This license allows:</strong>
+                </p>
+                <ul>
+                    <li>> Commercial reuse</li>
+                    <li>> Modification</li>
+                    <li>> Distribution</li>
+                    <li>> Patent use</li>
+                    <li>> Private use</li>
+                </ul>
+                <p style="margin-top:4vh;">
+                    <strong>This license does not allow:</strong>
+                </p>
+                <ul>
+                    <li>> Trademark use</li>
+                    <li>> Liability</li>
+                    <li>> Warranty</li>
+                </ul>
             </div>
-            <div style="width:50vw; float:right;">
-            
+            <div style="width:47vw; float:right;">
+                <h1>Us</h1>
+                <hr style="width: 75%;">
+                <p style="margin-top:2vh;">
+                    <strong>By using our services, you agree to:</strong>
+                </p>
+                <ul>
+                    <li>> Not violate any copyright that is property of SadBoat.</li>
+                    <li>> Not violate any trademark that is property of SadBoat.</li>
+                    <li>> Not pirate any material that is the intellectual property of SadBoat.</li>
+                    <li>> Not redistribute any material that is the intellectual property of SadBoat.</li>
+                    <li>> Not hold SadBoat liable for any issues you experience using our products.</li>
+                </ul>
+                <p style="margin-top:5vh;">
+                    <strong>For Humans:</strong>
+                </p>
+                <p style="margin-top:2vh;">
+                    We understand legal terms are generally messy, restrictive, and unpleasant to deal with. <br>We want to try and avoid that.
+                </p>
+                <p style="margin-top:2vh;">
+                    If you have any questions regarding this page, please reach out to contact@sadboat.com.
+                </p>
             </div>
         </section>
     </body>
