--- a/subpages/home.html
+++ b/subpages/home.html
@@ -24,7 +24,7 @@
             <table>
                 <tr>
                     <td style="width:50vw;">
-                        <img alt="logo" class="logo" loading="eager" src="../images/High_Res.png">
+                        <img alt="logo" class="logo" loading="eager" src="../images/Med_Res.png">
                     </td>
                     <td style="width:50vw;">
                         <h1 class="motto">Reckless Abandon</h1>
