--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
 
 
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0; width: 100%; overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="margin: 0; padding: 0;" id="root"></div>
+    <div style="width: 100vw; margin: 0; padding: 0;" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
