Updating Navbar, Writing News, Giving Git API Access, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,15 @@
 
     <title>SadBoat</title>
 
-
-    <link rel="stylesheet" href="../src/styles/colors.css" />
-    <link rel="stylesheet" href="../src/styles/footer.css" />
-    <link rel="stylesheet" href="../src/styles/includer.css" />
-    <link rel="stylesheet" href="../src/styles/index.css" />
-    <link rel="stylesheet" href="../src/styles/navbar.css" />
-
+    <style>
+            @keyframes fadeIn {
+              0% {opacity: 0;}
+              100% {opacity: 1;}
+            }
+            .fade-in{
+              animation: fadeIn 0.5s;
+            }
+    </style>
 
   </head>
   <body style="margin: 0; padding: 0; width: 100%; overflow-x: hidden;">
